# pragma-stack

./: .env.demo  .env.template  .gitignore  AGENTS.md  ANALYSIS_SUMMARY.md  AUTH_CONTEXT_MIGRATION_PLAN.md  CLAUDE.md  COMPONENT_IMPLEMENTATION_GUIDE.md  CONTRIBUTING.md  DEV_PAGES_QUICK_REFERENCE.md  DEV_PAGES_STRUCTURE_ANALYSIS.md  FEATURE_RECOMMENDATIONS.md  LICENSE  Makefile  README.md  README_ANALYSIS.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: README.md  backend-e2e-tests.yml.template  backend-tests.yml.template  e2e-tests.yml.template  frontend-tests.yml.template
backend/: .coveragerc  .dockerignore  .pre-commit-config.yaml  .secrets.baseline  =1.14.1  Dockerfile  Makefile  README.md  alembic.ini  coverage.json  entrypoint.sh  migrate.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  test_with_coverage.sh
backend/alembic/versions/: 7396957cbe80_initial_empty_migration.py
backend/app/: config.py  init_db.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_initial_models.py  0002_add_performance_indexes.py  0003_rename_oauth_account_token_fields_drop_encrypted_suffix.py  1174fffbe3e4_add_performance_indexes.py  2d0fcec3b06d_add_soft_delete_to_users.py  38bf9e7e74b3_add_all_initial_models.py  549b50ea888d_add_user_sessions_table.py  7396957cbe80_initial_empty_migration.py  9e4f2a1b8c7d_add_missing_indexes_and_fix_column_types.py  b76c725fc3cf_add_composite_indexes.py  c8e9f3a2d1b4_add_user_locale_preference_column.py  d5a7b2c9e1f3_add_oauth_models.py  f8c3d2e1a4b5_add_oauth_provider_models.py  fbf6318a8a36_add_organizations_and_user_organizations.py
backend/app/api/: main.py
backend/app/api/dependencies/: auth.py  locale.py  permissions.py  services.py
backend/app/api/routes/: admin.py  auth.py  oauth.py  oauth_provider.py  organizations.py  sessions.py  users.py
backend/app/core/: auth.py  config.py  database.py  database_async.py  demo_data.json  exceptions.py  repository_exceptions.py
backend/app/crud/: __init__.py  base.py  base_async.py  oauth.py  organization.py  organization_async.py  session.py  session_async.py  user.py  user_async.py
backend/app/models/: __init__.py  base.py  oauth_account.py  oauth_authorization_code.py  oauth_client.py  oauth_provider_token.py  oauth_state.py  organization.py  user.py  user_organization.py  user_session.py
backend/app/repositories/: __init__.py  base.py  oauth_account.py  oauth_authorization_code.py  oauth_client.py  oauth_consent.py  oauth_provider_token.py  oauth_state.py  organization.py  session.py  user.py
backend/app/schemas/: common.py  errors.py  oauth.py  organizations.py  sessions.py  users.py  validators.py
backend/app/services/: __init__.py  auth_service.py  email_service.py  oauth_provider_service.py  oauth_service.py  organization_service.py  session_cleanup.py  session_service.py  user_service.py
backend/app/utils/: auth_test_utils.py  device.py  security.py  test_utils.py
backend/docs/: ARCHITECTURE.md  BENCHMARKS.md  CODING_STANDARDS.md  COMMON_PITFALLS.md  COVERAGE_REPORT.md  E2E_TESTING.md  FEATURE_EXAMPLE.md
backend/tests/: conftest.py  test_init_db.py
backend/tests/api/: test_admin.py  test_admin_error_handlers.py  test_auth.py  test_auth_dependencies.py  test_auth_endpoints.py  test_auth_error_handlers.py  test_auth_password_reset.py  test_auth_security.py  test_oauth.py  test_organizations.py  test_permissions.py  test_permissions_security.py  test_security_headers.py  test_session_management.py  test_sessions.py  test_user_routes.py  test_users.py
backend/tests/api/dependencies/: __init__.py  test_auth_dependencies.py  test_locale_dependencies.py
backend/tests/api/routes/: test_auth.py  test_health.py  test_rate_limiting.py  test_users.py
backend/tests/benchmarks/: test_endpoint_performance.py
backend/tests/core/: test_auth.py  test_auth_security.py  test_config.py  test_config_security.py  test_database.py
backend/tests/crud/: test_base.py  test_base_db_failures.py  test_crud_base.py  test_crud_error_paths.py  test_oauth.py  test_organization.py  test_organization_async.py  test_session.py  test_session_async.py  test_session_db_failures.py  test_soft_delete.py  test_user.py  test_user_async.py
backend/tests/e2e/: __init__.py  conftest.py  test_admin_superuser_workflows.py  test_admin_workflows.py  test_api_contracts.py  test_database_workflows.py  test_oauth_provider_workflows.py  test_organization_workflows.py  test_session_workflows.py  test_user_workflows.py
backend/tests/models/: test_user.py
backend/tests/repositories/: test_base.py  test_base_db_failures.py  test_oauth.py  test_organization.py  test_session.py  test_session_db_failures.py  test_user.py
backend/tests/schemas/: test_organizations.py  test_user_schemas.py  test_validators.py
backend/tests/services/: test_auth_service.py  test_email_service.py  test_oauth_provider_service.py  test_oauth_service.py  test_organization_service.py  test_session_cleanup.py  test_session_service.py  test_user_service.py
backend/tests/utils/: test_device.py  test_security.py
docs/: I18N_IMPLEMENTATION_PLAN.md
docs/images/: .gitkeep
frontend/: .dockerignore  .eslintrc.json  .gitignore  .nycrc.json  .prettierignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  entrypoint.sh  eslint.config.mjs  frontend-requirements.md  jest.config.js  jest.environment.js  jest.setup.js  lighthouse-report.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/docs/: API_INTEGRATION.md  ARCHITECTURE.md  CODING_STANDARDS.md  COMMON_PITFALLS.md  COMPONENT_GUIDE.md  DEMO_MODE.md  DESIGN_SYSTEM.md  E2E_COVERAGE_GUIDE.md  E2E_PERFORMANCE_OPTIMIZATION.md  FEATURE_EXAMPLES.md  I18N.md  MSW_AUTO_GENERATION.md
frontend/e2e/: README.md  admin-access.spec.ts  admin-dashboard.spec.ts  admin-organization-members.spec.ts  admin-organizations.spec.ts  admin-users.spec.ts  auth-flows.spec.ts  auth-guard.spec.ts  auth-login.spec.ts  auth-oauth.spec.ts  auth-password-reset.spec.ts  auth.setup.ts  (+10 more)
(+333 files in other folders)
